--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.2",
-    "mongodb": "*",
-    "mongoose": "*",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11"
   }
