--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "test": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "axios": "^0.21.4",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "ping": "^0.4.1",
     "pug": "2.0.0-beta11"
   }
 }
