--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.0",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.2",
+    "https": "^1.0.0",
     "morgan": "~1.9.0",
     "ping": "^0.4.1",
     "pug": "2.0.0-beta11"
