--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www --ignore config.json"
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
@@ -17,6 +17,7 @@
     "express-session": "^1.17.2",
     "http-errors": "~1.6.2",
     "https": "^1.0.0",
+    "median": "^0.0.2",
     "morgan": "~1.9.0",
     "ping": "^0.4.1",
     "pug": "2.0.0-beta11"
