--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
   "name": "szakdolgozat",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www --ignore config.json"
   },
   "dependencies": {
-    "@popperjs/core": "^2.10.2",
-    "axios": "^0.21.4",
+    "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.17.2",
+    "express-metrics": "^1.1.0",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.2",
-    "https": "^1.0.0",
     "median": "^0.0.2",
-    "morgan": "~1.9.0",
-    "ping": "^0.4.1",
+    "morgan": "^1.10.0",
     "pug": "2.0.0-beta11"
   }
 }
