Prometheus added to project, Dockerfile made, a small fix made on controller.js, custom.js added to project (with custuom jQuerys), a redirection problem solved in admin.js, sample SoapUI XML added to the project, a sidebar added to the main screen and some small functions added to the map

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "debug": "~2.6.9",
     "express": "^4.17.2",
     "express-metrics": "^1.1.0",
+    "express-prometheus-middleware": "^1.2.0",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.2",
+    "jquery-editable-select": "^2.2.5",
     "median": "^0.0.2",
     "morgan": "^1.10.0",
     "pug": "2.0.0-beta11"
